
	2.3d - Feb 28, 2019
	---------
	Bugfix: the snps_per_loc_postfilters distribution in the populations.log.distrib file was slightly off due to counting
                the number of SNPs at loci where despite SNP objects present at the locus, all sites were fixed in the
	        focal populations.
	Bugifx: Some haplotypes could pass through the filter, even after particular SNPs were filtered from them.

Stacks 2.2 - Aug 22, 2018
--------------------------
    Feature: Added the --bestrad flag to process_radtags. When used it will look for reads that need transposed
             before they are processed.
    Feature: gstacks: New option --max-debrujin-reads to control the construction of the de Bruijn graph; replaces
             --min-kmer-freq which is now deprecated
    Bugfix: Fixed a breaking circumstantial segmentation fault in populations
    Bugfix: Added run number to output FASTQ headers in process_radtags to make sure read IDs are always unique.

Stacks 2.1 - June 25, 2018
--------------------------
    Bugfix: Fixed a performance regression in sstacks. Recent changes in sstacks made it more likely to
            invoke the gapped algorithm to match to the catalog. In some cases, matches to the catalog
            would be marked as ambiguous alignments and dropped from the next stages of analysis due to
            differences in CIGAR strings from the gapped alignment.
    Feature: ustacks Changed --high_cov_thres default value from 2.0 to 3.0.
    Feature: gstacks: Changed --min-kmer-freq default value from 0.05 to 0.01.
    Feature: Added further checks on zlib calls.

Stacks 2.0 - Apr 23, 2018
-------------------------
    Feature: modified cstacks and ustacks gapped alignment algorithms to always align the two stacks/alleles
             with the most k-mers in common, removed the previous minimum k-mer limit.
    Feature: modified cstacks so that when a sample locus matches two or more catalog loci, those catalog